# project_r

./: README.md  pyproject.toml
project_r/: __init__.py  decorators.py  exceptions.py  metadata.py  persistent_dict.py  rwlock.py
tests/: test_metadata.py  test_persitent_dict.py
